fix - overflow on ios hopefully

--- a/frontend/scss/read.scss
+++ b/frontend/scss/read.scss
@@ -13,14 +13,16 @@
 
     .read-container {
         border: 2px solid $color-w-0;
-        padding: 0.3em;
+        padding: 0.4em;
         animation: changePlayColor 30s infinite alternate;
         max-height: 50vh;
+        display: flex;
         .inner-container {
             border: 2px solid $color-w-0;
             padding: 0.2em;
             background-color: white;
-            height: 100%;
+            max-height: 100% !important;
+            overflow-y: auto;
         }
     }
 
